# kaggle-harness

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  pyproject.toml
deploy/: gateway.Dockerfile  runner-base.Dockerfile  worker.Dockerfile
docs/: competitions.md  datasets.md  datasets_metadata.md  implementation.md  kaggle_api.md  kernels.md  kernels_metadata.md  models.md  tutorials.md
docs/adr/: 0001-system-architecture.md
examples/titanic-baseline/: experiment.yaml  train.py
src/kaggle_harness/: config.py  logging.py
src/kaggle_harness/api/: app.py  deps.py  errors.py
src/kaggle_harness/api/routes/: competitions.py  datasets.py  experiments.py  kernels.py  submissions.py  workers.py
src/kaggle_harness/bundles/: bundle.py  manifest.py  store.py
src/kaggle_harness/db/: engine.py
src/kaggle_harness/db/migrations/: env.py
src/kaggle_harness/db/migrations/versions/: 20260513_a2f9b1c0_add_staged_inputs.py  20260513_ce94e3e3_create_core_tables.py
src/kaggle_harness/experiments/: models.py  service.py
src/kaggle_harness/inputs/: staging.py
src/kaggle_harness/jobs/: models.py  repository.py  service.py
src/kaggle_harness/kaggle/: client.py  service.py
src/kaggle_harness/protocol/: messages.py
src/kaggle_harness/submissions/: models.py  poller.py  service.py
src/kaggle_harness/tracking/: linkage.py  tracker.py
src/kaggle_harness/workers/: models.py
src/kaggle_harness_worker/: agent.py  client.py  config.py  executor.py  reporter.py
tests/unit/: test_bundles.py  test_competitions_route.py
