[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "kaggle-harness"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.30",
    "pydantic>=2.0",
    "pydantic-settings>=2.0",
    "sqlalchemy[asyncio]>=2.0",
    "sqlmodel>=0.0.21",
    "alembic>=1.13",
    "asyncpg>=0.29",
    "structlog>=24.0",
    "kaggle>=1.7",
    "httpx>=0.27",
    "aiobotocore>=2.13",
    "mlflow>=2.14",
    "python-multipart>=0.0.9",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
worker = [
    "docker>=7.0",
    "httpx>=0.27",
    "structlog>=24.0",
    "pydantic-settings>=2.0",
    "pyyaml>=6.0",
]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "httpx>=0.27",
]

[project.scripts]
kaggle-worker = "kaggle_harness_worker.agent:main"

[tool.hatch.build.targets.wheel]
packages = ["src/kaggle_harness", "src/kaggle_harness_worker"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
pythonpath = ["src"]
